--- a/index.html
+++ b/index.html
@@ -4,8 +4,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My food store</title>
+    <link rel="stylesheet" href="./css/style.css" >
 </head>
 <body>
-    hghfhgfbbtthhnnn
-</body>
+    <header class="topbar">
+        <div class="container flex justify-between items-center"  >
+            <div class="icons">
+                <a><img src="./icons/facebook.svg" alt="ficons"></a>
+                <a><img src="./icons/twitter.svg" alt="ficons"></a>
+                <a><img src="./icons/google.svg" alt="ficons"></a>
+                <a><img src="./icons/instagram.svg" alt="ficons"></a>
+                <a><img src="./icons/search.svg" alt="ficons"></a>
+            </div>
+            <div class="auth flex items-center">
+                <div>
+                    <img src="./icons/user-icon.svg" alt="">
+                    <a href="#">Log in</a>
+                </div>
+                <span class="divider">|</span>
+                <div>
+                    <img src="./icons/edit.svg" alt="">
+                    <a href="#">Register Now</a>
+                </div>
+                <span class="divider">|</span>
+                <div>
+                    <img src="./icons/cart.svg" alt="">
+                    <a href="#">0 Items - ($0.00)</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <nav>
+        <div class="top">
+            <div class="container flex justify-between">
+                <div class="contact flex items-center ">
+                    <img src="./icons/phone.svg" alt="">
+                    <div>
+                        <h5>Call US: (+84) 123 456 789</h5>
+                        <h6>E-mail : support@freshmeal.com</h6>
+                    </div>
+                </div>
+                <div class="branding">
+                    <img src="./icons/logo.svg" alt="">
+                </div>
+                <div class="time flex items-center">
+                    <img src="./icons/clock.svg" alt="">
+                    <div>
+                        <h5>Working Hours:</h5>
+                        <h6>Mon - Sat (8.00am - 12.00am)</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="navbar magic-shadow">
+            <div class="container flex justify-center">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Product</a>
+                <a href="#">Blog</a>
+                <a href="#">Shop</a>
+                <a href="#">Service</a>
+                <a href="#">Gallery</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
+    </nav>
+    <!-- <div class="container"> -->
+        <header class="hero flex items-center">
+            <div class="container">
+                <div class="welcome flex items-center">
+                   <span>welcome to</span> 
+                   <img src="./icons/logo.svg" alt="">
+                </div>
+                <h1>The World Best <span>Shopping</span> Website</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam commodi sint qui saepe cum, fuga, voluptas iure labore quo architecto officia aliquid quos.
+                    Eligendi maiores labore nobis omnis laboriosam?</p>
+                    <div>
+                        <button class="btn btn-p">Read More</button>
+                        <button class="btn btn-s">Shop Now</button>
+                    </div>
+                </div>
+                <!-- <div class="hero-img">
+                    <img src="./images/straw.png" alt="">
+                </div> -->
+            </header>
+        <!-- </div> -->
+            
+            
+        </body>
 </html>
