--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             </div>
         </div>
     </nav>
-    <!-- <div class="container"> -->
-        <header class="hero flex items-center">
+
+        <!-- <header class="hero flex items-center">
             <div class="container">
                 <div class="welcome flex items-center">
                    <span>welcome to</span> 
-                   <img src="./icons/logo.svg" alt="">
+                   <img src="./icons/logo-2.svg" alt="">
                 </div>
                 <h1>The World Best <span>Shopping</span> Website</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam commodi sint qui saepe cum, fuga, voluptas iure labore quo architecto officia aliquid quos.
@@ -84,13 +84,30 @@
                         <button class="btn btn-p">Read More</button>
                         <button class="btn btn-s">Shop Now</button>
                     </div>
+                    <div class="hero-img">
+                        <img src="./images/straw.png" alt="">
+                    </div>
                 </div>
-                <!-- <div class="hero-img">
-                    <img src="./images/straw.png" alt="">
-                </div> -->
             </header>
-        <!-- </div> -->
-            
-            
+              -->
+              <header class="hero flex items-center">
+                <div class="container">
+                    <div class="welcome flex items-center">
+                        <span>Welcome to</span>
+                        <img src="./icons/logo-2.svg" alt="">
+                    </div>
+                    <h1>The World Best <span>Shoping</span> Website</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        been the
+                        industry's standard dummy.</p>
+                    <div>
+                        <button class="btn btn-primary">Read More</button>
+                        <button class="btn btn-secondary">Shop Now</button>
+                    </div>
+                    <div class="hero-image">
+                        <img src="./images/straw.png" alt="">
+                    </div>
+                </div>
+            </header>
         </body>
 </html>
