--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My food store</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/style.css" >
 </head>
 <body>
@@ -102,12 +103,147 @@
                         industry's standard dummy.</p>
                     <div>
                         <button class="btn btn-primary">Read More</button>
-                        <button class="btn btn-secondary">Shop Now</button>
+                        <button class="btn btn-secondry">Shop Now</button>
                     </div>
                     <div class="hero-image">
                         <img src="./images/straw.png" alt="">
                     </div>
                 </div>
             </header>
+
+
+            <section class="top-products">
+                <div class="container">
+                    <h1 class="section-heading">Top Products</h1>
+                    <div class="slider">
+                        <button class="slider-btn prev-btn"><img src="./icons/pre.svg" alt=""></button>
+                        <button class="slider-btn next-btn"><img src="./icons/next.svg" alt=""></button>
+                        <div class="food-slider">
+                            <div class="food-card magic-shadow-sm">
+                                <div class="product-image flex items-center justify-center">
+                                    <img src="./images/plate-1.png" alt="">
+                                </div>
+                                <hr>
+                                <div>
+                                    <h2 class="text-center">Summer Salad</h2>
+                                    <div class="stars flex justify-center items-center">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                    </div>
+                                    <div class="price text-center">
+                                        $ 1.25
+                                    </div>
+                                    <div class="flex justify-center">
+                                        <button >
+                                            <img src="./icons/cart-2.svg" alt="">
+                                            <span>Add to cart</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="food-card magic-shadow-sm">
+                                <div class="product-image flex items-center justify-center">
+                                    <img src="./images/plate-2.png" alt="">
+                                </div>
+                                <hr>
+                                <div>
+                                    <h2 class="text-center">Russian Salad</h2>
+                                    <div class="stars flex justify-center items-center">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                    </div>
+                                    <div class="price text-center">
+                                        $ 1.25
+                                    </div>
+                                    <div class="flex justify-center">
+                                        <button >
+                                            <img src="./icons/cart-2.svg" alt="">
+                                            <span>Add to cart</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="food-card magic-shadow-sm">
+                                <div class="product-image flex items-center justify-center">
+                                    <img src="./images/plate-3.png" alt="">
+                                </div>
+                                <hr>
+                                <div>
+                                    <h2 class="text-center">Greek Salad</h2>
+                                    <div class="stars flex justify-center items-center">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                    </div>
+                                    <div class="price text-center">
+                                        $ 1.25
+                                    </div>
+                                    <div class="flex justify-center">
+                                        <button >
+                                            <img src="./icons/cart-2.svg" alt="">
+                                            <span>Add to cart</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="food-card magic-shadow-sm">
+                                <div class="product-image flex items-center justify-center">
+                                    <img src="./images/plate-3.png" alt="">
+                                </div>
+                                <hr>
+                                <div>
+                                    <h2 class="text-center">Cottege pie</h2>
+                                    <div class="stars flex justify-center items-center">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/start-filled.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                        <img src="./icons/star-grey.svg" alt="">
+                                    </div>
+                                    <div class="price text-center">
+                                        $ 1.25
+                                    </div>
+                                    <div class="flex justify-center">
+                                        <button >
+                                            <img src="./icons/cart-2.svg" alt="">
+                                            <span>Add to cart</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center btn-wrapper">
+                        <button class="btn btn-secondry">View More</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about-meal">
+                <div class="container">
+                    <h1 class="section-heading">About Fresh Meal</h1>
+                    <div class="about-meal-wrapper flex">
+                        <div><img src="./images/yogurt.png" alt=""></div>
+                        <div>
+                            <h2>Freshmeal is a long established fact that a reader will be distracted</h2>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden Sydney College in Virginia, The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+                            <button class="btn btn-secondry">View More</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+            <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+            <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+            <script src="js/app.js"></script>
         </body>
 </html>
