--- a/index.html
+++ b/index.html
@@ -347,42 +347,74 @@
             </section>
 
             <section class="contact-us flex">
-                <div class="contact-info-wrapper flex-1">
+                <div class="contact-info-wrapper">
                     <h1 class="section-heading">Contact Us</h1>
                     <div class="contact-info">
-                        <div class="flex items-center">
+                        <div>
                             <div>
                                 <img src="./icons/phone-2.svg" alt="">
+                                <div>
+                                    <span>Call us:</span>
+                                    <span>(+84) 123 456 789</span>
+                                </div> 
                             </div>
                             <div>
-                                <span>Call us</span>
-                                <span>(+84) 123 456 789</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center">
-                            <div>
-                                <img src="./icons/phone-2.svg" alt="">
+                                <img src="./icons/bag-2.svg" alt="">
+                                <div>
+                                    <span>E-mail ::</span>
+                                    <span>support@freshmeal.com</span>
+                                </div>
                             </div>
                             <div>
-                                <span>E-mail ::</span>
-                                <span>support@freshmeal.com</span>
+                                <img src="./icons/clock-2.svg" alt="">
+                                <div>
+                                    <span>Working Hours:</span>
+                                    <span>Mon - Sat (8.00am - 12.00am)</span>
+                                </div>
                             </div>
-                        </div> 
-                        <div class="flex items-center">
-                            <div>
-                                <img src="./icons/phone-2.svg" alt="">
-                            </div>
-                            <div>
-                                <span>Working Hours:</span>
-                                <span>Mon - Sat (8.00am - 12.00am)</span>
-                            </div>
-                        </div>
                     </div>
+                </div>
                 </div>
                 <div class="map flex-1">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93223.55786284825!2d-79.14403059171123!3d43.09955117320214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d363ea29e633b7%3A0x61975ae4b9c5aab3!2sNiagara%20Falls%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1680724190780!5m2!1sen!2s" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
+
+            <!-- <section class="contact-us flex">
+                <div class="contact-info-wrapper">
+                    <h1 class="section-heading">Contact us</h1>
+                    <div class="contact-info">
+                        <div>
+                            <div>
+                                <img src="./icons/phone-2.svg" alt="">
+                                <div>
+                                    <span>Call us:</span>
+                                    <span>(+84) 123 456 789</span>
+                                </div> 
+                            </div>
+                            <div>
+                                <img src="./icons/bag-2.svg" alt="">
+                                <div>
+                                    <span>E-mail ::</span>
+                                    <span>support@freshmeal.com</span>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="./icons/clock-2.svg" alt="">
+                                <div>
+                                    <span>Working Hours:</span>
+                                    <span>Mon - Sat (8.00am - 12.00am)</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206253.45012861438!2d-115.31508258571672!3d36.124918453865035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80beb782a4f57dd1%3A0x3accd5e6d5b379a3!2sLas%20Vegas%2C%20NV%2C%20USA!5e0!3m2!1sen!2sru!4v1580850940897!5m2!1sen!2sru"
+                        width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
+            </section> -->
 
 
 
