--- a/index.html
+++ b/index.html
@@ -11,7 +11,44 @@
 
     <div class="main-wrapper">
         <div class="nav-background">
-            Navigation Links
+            <div class="mobile-logo">
+                <img src="./icons/logo.svg" alt="">
+            </div>
+            <div class="mobile-nav">
+                <div class="cart">
+                    <div class="flex items-center">
+                        <img src="./icons/cart-dark.svg" alt="">
+                        <a href="#">0 Items - ($0.00)</a>
+                    </div>
+                </div>
+                    <div class="nav-top">
+                        <ul>
+                            <li><a href="#"></a>Home</li>
+                            <li><a href="#"></a>About Us</li>
+                            <li><a href="#"></a>Products</li>
+                            <li><a href="#"></a>Blog</li>
+                            <li><a href="#"></a>Shop</li>
+                            <li><a href="#"></a>Services</li>
+                            <li><a href="#"></a>Contact us</li>
+                            <li><a href="#"></a>Login</li>
+                            <li><a href="#"></a>Register</li>
+                        </ul>
+                    </div>
+                    <div class="contact flex items-center">
+                        <img src="./icons/phone.svg" alt="">
+                        <div>
+                            <h5>Call Us: (+84) 123 456 789</h5>
+                            <h6>E-mail : support@freshmeal.com</h6>
+                        </div>
+                    </div>
+                    <div class="time flex items-center">
+                        <img src="./icons/clock.svg" alt="">
+                        <div>
+                            <h5>Working Hours:</h5>
+                            <h6>Mon - Sat (8.00am - 12.00am)</h6>
+                        </div>
+                    </div>
+            </div>
         </div>
         <div class="site-content-wrapper">
             <div class="nav-trigger">
@@ -22,6 +59,8 @@
                     <line x1="18" y1="20" x2="18" y2="4" />
                     <line x1="6" y1="20" x2="6" y2="16" /></svg>
             </div>
+
+
             <div class="site-content">
                 <header class="topbar">
                     <div class="container flex justify-between items-center"  >
